# san_sheng_world

./: .gitattributes  .gitignore  .gitmodules  APP_LOG_FILE  CMakeLists.txt  README.md  Tips.txt  development_requirements.txt  final_requirements.md  log_config.json
.claude/: settings.local.json
changelog/: FIXES_2_CHANGELOG.md  FIXES_3_CHANGELOG.md  FIXES_4_CHANGELOG.md  FIXES_5_CHANGELOG.md  FIXES_6_CHANGELOG.md  FIXES_7_CHANGELOG.md  FIXES_8_CHANGELOG.md  FIXES_9_CHANGELOG.md
docs/: Tips.txt  USAGE.md  api_reference.md  architecture.md
fixes/: issues_1.txt  issues_2.txt  issues_3.txt  issues_4.txt  issues_5.txt  issues_6.txt  issues_7.txt  issues_8.txt  issues_9.txt
scripts/: build.bat  build.sh  run.bat  run.sh  test.bat  test.sh
scripts_luau/: example_tool.luau
src/: CMakeLists.txt
src/common/: CMakeLists.txt  config.cpp  config.hpp  console_kit.cpp  console_kit.hpp  constants.cpp  constants.hpp  logger.cpp  logger.hpp  utils.cpp  utils.hpp
src/core/: CMakeLists.txt  agent_loop.cpp  agent_loop.hpp  conversation.cpp  conversation.hpp  tool_registry.cpp  tool_registry.hpp
src/core/api/: anthropic_client.cpp  anthropic_client.hpp  http_client.cpp  http_client.hpp
src/core/process_engine/: message_formatter.cpp  message_formatter.hpp  response_parser.cpp  response_parser.hpp
src/core/script/: luau_engine.cpp  luau_engine.hpp  script_tool.cpp  script_tool.hpp
src/log/: log_config_example.json  log_manager.cpp  log_manager.h
src/main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/test_common/: CMakeLists.txt  test_config.cpp  test_logger.cpp
tests/test_core/: CMakeLists.txt  test_agent_loop.cpp  test_conversation.cpp  test_tool_registry.cpp
tests/test_script/: CMakeLists.txt  test_luau_engine.cpp
